--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
     <section id="about" class="py-20">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="grid grid-cols-1 lg:grid-cols-2 gap-12 items-start">
-                <div>
+                <div class="order-2">
                     <h2 class="text-3xl font-bold mb-6 flex items-center gap-3">
                         <span class="text-brand-500 font-mono text-2xl">01.</span> <span data-i18n="about_title">Sobre
                             Mí</span>
@@ -174,7 +174,7 @@
                         </p>
                     </div>
                 </div>
-                <div>
+                <div class="order-1">
                     <h3 class="text-2xl font-bold text-white mb-4" data-i18n="about_stack">Skills</h3>
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-6 text-slate-300">
                         <div>
