--- a/index.html
+++ b/index.html
@@ -157,24 +157,7 @@
     <section id="about" class="py-20">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="grid grid-cols-1 lg:grid-cols-2 gap-12 items-start">
-                <div class="order-2">
-                    <h2 class="text-3xl font-bold mb-6 flex items-center gap-3">
-                        <span class="text-brand-500 font-mono text-2xl">01.</span> <span data-i18n="about_title">Sobre
-                            Mí</span>
-                    </h2>
-                    <div class="prose prose-invert text-slate-300">
-                        <p class="mb-4" data-i18n="about_p1">
-                            Statistician and Data Scientist with 12+ years of experience leveraging large datasets to
-                            generate clear, actionable insights that support strategic decision-making.
-                        </p>
-                        <p class="mb-6" data-i18n="about_p2">
-                            Strong expertise in statistical sampling, multivariate analysis, machine learning, predictive
-                            modeling, big data, and data visualization, with advanced command of modern analytical tools and
-                            the adaptability to work effectively across industries and analytical environments.
-                        </p>
-                    </div>
-                </div>
-                <div class="order-1">
+                <div>
                     <h3 class="text-2xl font-bold text-white mb-4" data-i18n="about_stack">Skills</h3>
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-6 text-slate-300">
                         <div>
@@ -214,10 +197,22 @@
                         </div>
                     </div>
                 </div>
+                <div>
+                    <h2 class="text-3xl font-bold mb-6 flex items-center gap-3">
+                        <span class="text-brand-500 font-mono text-2xl">01.</span> <span data-i18n="about_title">Sobre Mi</span>
+                    </h2>
+                    <div class="prose prose-invert text-slate-300">
+                        <p class="mb-4" data-i18n="about_p1">
+                            Statistician and Data Scientist with 12+ years of experience leveraging large datasets to generate clear, actionable insights that support strategic decision-making.
+                        </p>
+                        <p class="mb-6" data-i18n="about_p2">
+                            Strong expertise in statistical sampling, multivariate analysis, machine learning, predictive modeling, big data, and data visualization, with advanced command of modern analytical tools and the adaptability to work effectively across industries and analytical environments.
+                        </p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
-
     <!-- Projects Section -->
     <section id="projects" class="py-20 bg-slate-900/50">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
