--- a/index.html
+++ b/index.html
@@ -161,19 +161,19 @@
                     <h3 class="text-2xl font-bold text-white mb-4" data-i18n="about_stack">Skills</h3>
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-6 text-slate-300">
                         <div>
-                            <div class="text-sm font-semibold text-slate-200 mb-2">Languages</div>
+                            <div class="text-sm font-semibold text-slate-200 mb-2">Business & Metrics</div>
                             <ul class="space-y-1 font-mono text-sm text-slate-400">
-                                <li class="flex items-center gap-2"><i class="fa-brands fa-python text-yellow-400"></i> <span data-i18n="skill_langs">Python, R, SQL, C, C++</span></li>
+                                <li class="flex items-center gap-2"><i class="fa-solid fa-clipboard-check text-teal-300"></i> <span data-i18n="skill_biz_interp">Business Problem Interpretation, Metric Design</span></li>
+                                <li class="flex items-center gap-2"><i class="fa-solid fa-vials text-amber-300"></i> <span data-i18n="skill_survey_impact">Survey Design, Program Impact Evaluation</span></li>
                             </ul>
                             <div class="text-sm font-semibold text-slate-200 mt-3 mb-2">ML / Modeling</div>
                             <ul class="space-y-1 font-mono text-sm text-slate-400">
                                 <li class="flex items-center gap-2"><i class="fa-solid fa-brain text-purple-400"></i> <span data-i18n="skill_ml">Predictive Modeling, Machine Learning, Generative AI</span></li>
                                 <li class="flex items-center gap-2"><i class="fa-solid fa-diagram-project text-blue-300"></i> <span data-i18n="skill_multivariate">Multivariate Statistical Methods</span></li>
                             </ul>
-                            <div class="text-sm font-semibold text-slate-200 mt-3 mb-2">Business & Metrics</div>
+                            <div class="text-sm font-semibold text-slate-200 mt-3 mb-2">Languages</div>
                             <ul class="space-y-1 font-mono text-sm text-slate-400">
-                                <li class="flex items-center gap-2"><i class="fa-solid fa-clipboard-check text-teal-300"></i> <span data-i18n="skill_biz_interp">Business Problem Interpretation, Metric Design</span></li>
-                                <li class="flex items-center gap-2"><i class="fa-solid fa-vials text-amber-300"></i> <span data-i18n="skill_survey_impact">Survey Design, Program Impact Evaluation</span></li>
+                                <li class="flex items-center gap-2"><i class="fa-brands fa-python text-yellow-400"></i> <span data-i18n="skill_langs">Python, R, SQL, C, C++</span></li>
                             </ul>
                         </div>
                         <div>
