Meta: add Open Graph/Twitter preview with PCDCN8bits image

--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portafolio Data Scientist</title>
+    <!-- Social Sharing Preview -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Portafolio Data Scientist">
+    <meta property="og:description" content="Portfolio de Pedro: ciencia de datos, estadística, visualización y proyectos destacados.">
+    <meta property="og:image" content="https://pcdelcampon.github.io/portfolio/assets/img/PCDCN8bits.png">
+    <meta property="og:url" content="https://pcdelcampon.github.io/portfolio/">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Portafolio Data Scientist">
+    <meta name="twitter:description" content="Portfolio de Pedro: ciencia de datos, estadística, visualización y proyectos destacados.">
+    <meta name="twitter:image" content="https://pcdelcampon.github.io/portfolio/assets/img/PCDCN8bits.png">
 
     <!-- Design Resources -->
     <script src="https://cdn.tailwindcss.com"></script>
