--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <title>Portafolio Data Scientist</title>
     <!-- Social Sharing Preview -->
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Portafolio Data Scientist">
-    <meta property="og:description" content="Portfolio de Pedro: ciencia de datos, estadística, visualización y proyectos destacados.">
+    <meta property="og:title" content="Statistician &amp; Data Scientist">
+    <meta property="og:description" content="Hello, I am Pedro. This is my portfolio.">
     <meta property="og:image" content="https://pcdelcampon.github.io/portfolio/assets/img/PCDCN8bits.png">
     <meta property="og:url" content="https://pcdelcampon.github.io/portfolio/">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Portafolio Data Scientist">
-    <meta name="twitter:description" content="Portfolio de Pedro: ciencia de datos, estadística, visualización y proyectos destacados.">
+    <meta name="twitter:title" content="Statistician &amp; Data Scientist">
+    <meta name="twitter:description" content="Hello, I am Pedro. This is my portfolio.">
     <meta name="twitter:image" content="https://pcdelcampon.github.io/portfolio/assets/img/PCDCN8bits.png">
 
     <!-- Design Resources -->
