--- a/index.html
+++ b/index.html
@@ -98,8 +98,9 @@
                         &lt;PedroC/<span class="text-brand-500">S&amp;DS</span>&gt;
                     </span>
                 </div>
-                <button id="nav-toggle" class="md:hidden text-slate-200 hover:text-white focus:outline-none">
-                    <i class="fa-solid fa-bars text-xl"></i>
+                <button id="nav-toggle"
+                    class="md:hidden flex items-center justify-center w-11 h-11 rounded-full bg-slate-800/80 border border-slate-600/70 text-white shadow-lg hover:ring-2 hover:ring-cyan-400/60 hover:scale-105 transition focus:outline-none focus:ring-2 focus:ring-cyan-400/70">
+                    <i class="fa-solid fa-bars text-2xl"></i>
                 </button>
                 <div id="nav-menu" class="hidden md:flex items-center gap-8">
                     <div class="flex flex-col md:flex-row md:items-baseline md:space-x-8 gap-2 md:gap-0">
