--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
                     </span>
                 </div>
                 <button id="nav-toggle"
-                    class="md:hidden flex items-center justify-center w-11 h-11 rounded-full bg-slate-800/80 border border-slate-600/70 text-white shadow-lg hover:ring-2 hover:ring-cyan-400/60 hover:scale-105 transition focus:outline-none focus:ring-2 focus:ring-cyan-400/70">
-                    <i class="fa-solid fa-bars text-2xl"></i>
+                    class="md:hidden flex items-center justify-center w-12 h-12 rounded-full bg-brand-600 text-white shadow-xl border border-brand-500/80 hover:bg-brand-500 hover:scale-105 hover:ring-2 hover:ring-white/60 transition focus:outline-none focus:ring-2 focus:ring-white/70">
+                    <i class="fa-solid fa-bars text-2xl drop-shadow"></i>
                 </button>
                 <div id="nav-menu" class="hidden md:flex items-center gap-8">
                     <div class="flex flex-col md:flex-row md:items-baseline md:space-x-8 gap-2 md:gap-0">
