UI: improve mobile nav spacing and grouping

--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
                     class="md:hidden flex items-center justify-center w-12 h-12 rounded-full bg-brand-600 text-white shadow-xl border border-brand-500/80 hover:bg-brand-500 hover:scale-105 hover:ring-2 hover:ring-white/60 transition focus:outline-none focus:ring-2 focus:ring-white/70">
                     <i class="fa-solid fa-bars text-2xl drop-shadow"></i>
                 </button>
-                <div id="nav-menu" class="hidden md:flex items-center gap-8">
-                    <div class="flex flex-col md:flex-row md:items-baseline md:space-x-8 gap-2 md:gap-0">
+                <div id="nav-menu" class="hidden md:flex items-center gap-6 md:gap-8">
+                    <div class="flex flex-col md:flex-row md:items-baseline md:space-x-8 gap-3 md:gap-0 px-4 py-4 md:p-0 bg-slate-900/90 md:bg-transparent rounded-2xl shadow-lg md:shadow-none">
                         <a href="#hero"
                             class="hover:text-brand-500 px-3 py-2 rounded-md text-sm font-medium transition-colors"
                             data-i18n="nav_home">Inicio</a>
@@ -121,20 +121,18 @@
                             data-i18n="nav_contact">Contacto</a>
                     </div>
                     <!-- Language Switcher -->
-                    
-<div class="flex items-center gap-3 text-sm md:border-l md:border-slate-600 md:pl-6">
-    <button id="btn-es" class="flex items-center gap-2 md:gap-1 px-2 py-1 bg-slate-800/70 border border-slate-600/70 rounded-full shadow-sm transition-all hover:scale-105 hover:ring-2 hover:ring-cyan-400/60">
-        <img src="https://flagcdn.com/w40/es.png" alt="Español" title="Español"
-            class="w-9 h-9 md:w-6 md:h-6 rounded-full">
-        <span class="font-semibold md:hidden text-slate-200 text-xs">ES</span>
-    </button>
-    <button id="btn-en" class="flex items-center gap-2 md:gap-1 px-2 py-1 bg-slate-800/70 border border-slate-600/70 rounded-full shadow-sm transition-all hover:scale-105 hover:ring-2 hover:ring-cyan-400/60">
-        <img src="https://flagcdn.com/w40/gb.png" alt="English" title="English"
-            class="w-9 h-9 md:w-6 md:h-6 rounded-full">
-        <span class="font-semibold md:hidden text-slate-200 text-xs">EN</span>
-    </button>
-</div>
-
+                    <div class="flex items-center gap-3 text-sm md:border-l md:border-slate-600 md:pl-6 px-4 py-3 md:p-0 bg-slate-900/90 md:bg-transparent rounded-2xl shadow-lg md:shadow-none">
+                        <button id="btn-es" class="flex items-center gap-2 md:gap-1 px-2 py-1 bg-slate-800/70 border border-slate-600/70 rounded-full shadow-sm transition-all hover:scale-105 hover:ring-2 hover:ring-cyan-400/60">
+                            <img src="https://flagcdn.com/w40/es.png" alt="Español" title="Español"
+                                class="w-9 h-9 md:w-6 md:h-6 rounded-full">
+                            <span class="font-semibold md:hidden text-slate-200 text-xs">ES</span>
+                        </button>
+                        <button id="btn-en" class="flex items-center gap-2 md:gap-1 px-2 py-1 bg-slate-800/70 border border-slate-600/70 rounded-full shadow-sm transition-all hover:scale-105 hover:ring-2 hover:ring-cyan-400/60">
+                            <img src="https://flagcdn.com/w40/gb.png" alt="English" title="English"
+                                class="w-9 h-9 md:w-6 md:h-6 rounded-full">
+                            <span class="font-semibold md:hidden text-slate-200 text-xs">EN</span>
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
