--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
 <body class="antialiased selection:bg-brand-500 selection:text-white">
     <!-- Navigation -->
-    <nav class="fixed w-full z-50 glass-panel border-b-0">
+<nav class="fixed w-full z-50 glass-panel border-b-0 relative">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex items-center justify-between h-16">
                 <div class="flex items-center">
@@ -102,8 +102,9 @@
                     class="md:hidden flex items-center justify-center w-12 h-12 rounded-full bg-brand-600 text-white shadow-xl border border-brand-500/80 hover:bg-brand-500 hover:scale-105 hover:ring-2 hover:ring-white/60 transition focus:outline-none focus:ring-2 focus:ring-white/70">
                     <i class="fa-solid fa-bars text-2xl drop-shadow"></i>
                 </button>
-                <div id="nav-menu" class="hidden md:flex items-center gap-6 md:gap-8">
-                    <div class="flex flex-col md:flex-row md:items-baseline md:space-x-8 gap-3 md:gap-0 px-4 py-4 md:p-0 bg-slate-900/90 md:bg-transparent rounded-2xl shadow-lg md:shadow-none">
+                <div id="nav-menu"
+                    class="hidden flex-col gap-4 bg-slate-900/95 rounded-2xl p-4 shadow-2xl absolute right-4 top-20 w-48 md:w-auto md:shadow-none md:bg-transparent md:p-0 md:flex md:flex-row md:items-center md:gap-6 md:gap-8 md:static md:rounded-none md:top-auto md:right-auto">
+                    <div class="flex flex-col gap-3 md:flex-row md:items-baseline md:space-x-8 md:gap-0">
                         <a href="#hero"
                             class="hover:text-brand-500 px-3 py-2 rounded-md text-sm font-medium transition-colors"
                             data-i18n="nav_home">Inicio</a>
@@ -117,11 +118,12 @@
                             class="hover:text-brand-500 px-3 py-2 rounded-md text-sm font-medium transition-colors"
                             data-i18n="nav_viz">Viz Lab</a>
                         <a href="#contact"
-                            class="bg-brand-600 hover:bg-brand-500 text-white px-4 py-2 rounded-full text-sm font-medium transition-all transform hover:scale-105"
+                            class="bg-brand-600 hover:bg-brand-500 text-white px-4 py-2 rounded-full text-sm font-medium transition-all transform hover:scale-105 shadow-md"
                             data-i18n="nav_contact">Contacto</a>
                     </div>
                     <!-- Language Switcher -->
-                    <div class="flex items-center gap-3 text-sm md:border-l md:border-slate-600 md:pl-6 px-4 py-3 md:p-0 bg-slate-900/90 md:bg-transparent rounded-2xl shadow-lg md:shadow-none">
+                    <div
+                        class="flex items-center gap-3 text-sm md:border-l md:border-slate-600 md:pl-6 px-2 py-2 md:p-0 bg-slate-800/90 md:bg-transparent rounded-2xl shadow-lg md:shadow-none">
                         <button id="btn-es" class="flex items-center gap-2 md:gap-1 px-2 py-1 bg-slate-800/70 border border-slate-600/70 rounded-full shadow-sm transition-all hover:scale-105 hover:ring-2 hover:ring-cyan-400/60">
                             <img src="https://flagcdn.com/w40/es.png" alt="Español" title="Español"
                                 class="w-9 h-9 md:w-6 md:h-6 rounded-full">
