--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
         </div>
     </section>
 
-    <!-- Viz Lab Section (placeholder) -->
+    <!-- Viz Lab Section (commented out until visualizations are ready)
     <section id="viz-lab" class="py-20 border-t border-slate-800">
         <div class="max-w-7xl mx-auto px-4 text-center">
             <h2 class="text-3xl font-bold mb-6 flex items-center justify-center gap-3">
@@ -409,6 +409,7 @@
             </div>
         </div>
     </section>
+    -->
 
     <!-- Footer -->
     <footer id="contact" class="py-12 border-t border-slate-800 text-center">
