Nav: comment out Viz Lab link

--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
                         <a href="#projects"
                             class="hover:text-brand-500 px-3 py-2 rounded-md text-sm font-medium transition-colors"
                             data-i18n="nav_projects">Portafolio</a>
-                        <a href="#viz-lab"
+                        <!-- <a href="#viz-lab"
                             class="hover:text-brand-500 px-3 py-2 rounded-md text-sm font-medium transition-colors"
-                            data-i18n="nav_viz">Viz Lab</a>
+                            data-i18n="nav_viz">Viz Lab</a> -->
                         <a href="#contact"
                             class="bg-brand-600 hover:bg-brand-500 text-white px-4 py-2 rounded-full text-sm font-medium transition-all transform hover:scale-105 shadow-md"
                             data-i18n="nav_contact">Contacto</a>
