--- a/index.html
+++ b/index.html
@@ -411,17 +411,24 @@
     </section>
     -->
 
-    <!-- Footer -->
-    <footer id="contact" class="py-12 border-t border-slate-800 text-center">
-        <h2 class="text-2xl font-bold mb-8" data-i18n="footer_title">¿Tienes datos interesantes?</h2>
-        <a href="mailto:pcdelcampon@gmail.com"
-            class="text-4xl md:text-5xl font-bold text-slate-400 hover:text-brand-500 transition-colors">pcdelcampon@gmail.com</a>
-        <div class="mt-12 flex justify-center gap-8 text-2xl text-slate-500">
-            <a href="https://www.linkedin.com/in/pcdelcampon" target="_blank" class="hover:text-white"><i
-                    class="fa-brands fa-linkedin"></i></a>
-            <a href="https://github.com/pcdelcampon" target="_blank" class="hover:text-white"><i class="fa-brands fa-github"></i></a>
+        <!-- Footer / Contact -->
+    <footer id="contact" class="py-20 border-t border-slate-800 text-center">
+        <h2 class="text-3xl md:text-4xl font-bold mb-6" data-i18n="footer_title">Ready to Collaborate?</h2>
+        <p class="text-lg md:text-xl text-slate-300 max-w-3xl mx-auto mb-10" data-i18n="footer_desc">
+            I'm currently open for new opportunities in Data Science/Vis. Whether you have a question or just want to
+            say hi, I'll try my best to get back to you!
+        </p>
+        <div class="flex justify-center mb-12">
+            <a href="mailto:pcdelcampon@gmail.com"
+                class="inline-flex items-center justify-center px-8 py-3 rounded-full bg-gradient-to-r from-cyan-400 to-purple-600 text-slate-900 font-semibold text-lg shadow-lg hover:shadow-xl hover:-translate-y-0.5 transition"
+                data-i18n="footer_cta">Say Hello</a>
         </div>
-        <div class="mt-12 text-sm text-slate-600 font-mono" data-i18n="footer_copy">&copy; 2024 Pedro C. Del Campo. Portafolio profesional... Gracias a VibeCoding por hacer este portafolio posible.</div>
+        <div class="flex justify-center gap-8 text-3xl text-slate-400">
+            <a href="https://github.com/pcdelcampon" target="_blank" class="hover:text-white"><i
+                    class="fa-brands fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/pcdelcampon" target="_blank" class="hover:text-white"><i class="fa-brands fa-linkedin"></i></a>
+        </div>
+        <div class="mt-10 text-sm text-slate-600 font-mono" data-i18n="footer_copy">&copy; 2024 Pedro C. Del Campo. Gracias a VibeCoding por hacer este portafolio posible.</div>
     </footer>
 
     <!-- JS Scripts -->
