--- a/index.html
+++ b/index.html
@@ -77,13 +77,14 @@
         }
 
         #hero-canvas {
-            position: absolute;
+            position: fixed;
             top: 0;
             left: 0;
             width: 100%;
             height: 100%;
             z-index: -1;
-            opacity: 0.6;
+            opacity: 0.55;
+            pointer-events: none;
         }
     </style>
 </head>
