Meta: update page title and favicon

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Portafolio Data Scientist</title>
+    <title>Portfolio Pedro C.</title>
+    <link rel="icon" type="image/png" href="assets/img/PCDCN8bits.png">
     <!-- Social Sharing Preview -->
     <meta property="og:type" content="website">
     <meta property="og:title" content="Statistician &amp; Data Scientist">
