Meta: add cache-busting to favicon

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Portfolio Pedro C.</title>
-    <link rel="icon" type="image/png" href="assets/img/PCDCN8bits.png">
+    <link rel="icon" type="image/png" href="assets/img/PCDCN8bits.png?v=2">
+    <link rel="shortcut icon" href="assets/img/PCDCN8bits.png?v=2">
     <!-- Social Sharing Preview -->
     <meta property="og:type" content="website">
     <meta property="og:title" content="Statistician &amp; Data Scientist">
