--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
 <body class="antialiased selection:bg-brand-500 selection:text-white">
     <!-- Navigation -->
-<nav class="fixed w-full z-50 glass-panel border-b-0 relative">
+<nav class="fixed top-0 left-0 right-0 w-full z-50 glass-panel border-b border-slate-800 bg-slate-900/90 backdrop-blur relative">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex items-center justify-between h-16">
                 <div class="flex items-center">
