--- a/project_template.html
+++ b/project_template.html
@@ -53,7 +53,7 @@
 <body class="antialiased">
 
     <!-- Compact Navigation -->
-    <nav class="fixed w-full z-50 glass-panel h-16 flex items-center">
+    <nav class="fixed top-0 left-0 right-0 w-full z-50 glass-panel h-16 flex items-center bg-slate-900/90 backdrop-blur border-b border-slate-800">
         <div class="max-w-7xl mx-auto px-4 w-full flex justify-between">
             <a href="index.html" class="flex items-center gap-2 text-slate-300 hover:text-white transition-colors">
                 <i class="fa-solid fa-arrow-left"></i>
