--- a/project_template.html
+++ b/project_template.html
@@ -40,6 +40,7 @@
         body {
             background-color: #0f172a;
             color: #f8fafc;
+            padding-top: 72px; /* keep fixed nav clear on scroll */
         }
 
         .glass-panel {
@@ -53,7 +54,7 @@
 <body class="antialiased">
 
     <!-- Compact Navigation -->
-    <nav class="fixed top-0 left-0 right-0 w-full z-50 glass-panel h-16 flex items-center bg-slate-900/90 backdrop-blur border-b border-slate-800">
+    <nav class="fixed top-0 left-0 right-0 w-full z-[100] glass-panel h-16 flex items-center bg-slate-900/95 backdrop-blur-md border-b border-slate-800">
         <div class="max-w-7xl mx-auto px-4 w-full flex justify-between">
             <a href="index.html" class="flex items-center gap-2 text-slate-300 hover:text-white transition-colors">
                 <i class="fa-solid fa-arrow-left"></i>
