UI: hide extra project cards to show only two

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                     <div class="flex gap-6 min-w-full">
                         <!-- Project Card 1 -->
                         <div
-                            class="w-[320px] sm:w-[360px] glass-panel rounded-2xl overflow-hidden hover:-translate-y-2 transition duration-300 flex-shrink-0">
+                            class="hidden w-[320px] sm:w-[360px] glass-panel rounded-2xl overflow-hidden hover:-translate-y-2 transition duration-300 flex-shrink-0">
                             <div class="h-44 bg-gradient-to-br from-slate-700 to-slate-800 flex items-center justify-center">
                                 <i class="fa-solid fa-chart-area text-5xl text-slate-600 group-hover:text-brand-500 transition-colors"></i>
                             </div>
@@ -270,7 +270,7 @@
 
                         <!-- Project Card 2 -->
                         <div
-                            class="w-[320px] sm:w-[360px] glass-panel rounded-2xl overflow-hidden hover:-translate-y-2 transition duration-300 flex-shrink-0">
+                            class="hidden w-[320px] sm:w-[360px] glass-panel rounded-2xl overflow-hidden hover:-translate-y-2 transition duration-300 flex-shrink-0">
                             <div class="h-44 bg-gradient-to-br from-purple-900/50 to-slate-800 flex items-center justify-center">
                                 <i class="fa-solid fa-comments text-5xl text-slate-600 group-hover:text-purple-400 transition-colors"></i>
                             </div>
@@ -297,7 +297,7 @@
 
                         <!-- Project Card 3 -->
                         <div
-                            class="w-[320px] sm:w-[360px] glass-panel rounded-2xl overflow-hidden hover:-translate-y-2 transition duration-300 flex-shrink-0">
+                            class="hidden w-[320px] sm:w-[360px] glass-panel rounded-2xl overflow-hidden hover:-translate-y-2 transition duration-300 flex-shrink-0">
                             <div class="h-44 bg-gradient-to-br from-emerald-900/40 to-slate-800 flex items-center justify-center">
                                 <i class="fa-solid fa-arrow-trend-up text-5xl text-slate-600 group-hover:text-emerald-400 transition-colors"></i>
                             </div>
@@ -321,7 +321,7 @@
 
                         <!-- Project Card 4 -->
                         <div
-                            class="w-[320px] sm:w-[360px] glass-panel rounded-2xl overflow-hidden hover:-translate-y-2 transition duration-300 flex-shrink-0">
+                            class="hidden w-[320px] sm:w-[360px] glass-panel rounded-2xl overflow-hidden hover:-translate-y-2 transition duration-300 flex-shrink-0">
                             <div class="h-44 bg-gradient-to-br from-cyan-900/50 to-slate-800 flex items-center justify-center">
                                 <i class="fa-solid fa-database text-5xl text-slate-600 group-hover:text-cyan-300 transition-colors"></i>
                             </div>
