--- a/index.html
+++ b/index.html
@@ -246,24 +246,30 @@
                     <div class="flex gap-6 min-w-full">
                         <!-- Project Card 1 -->
                         <div
-                            class="hidden w-[320px] sm:w-[360px] glass-panel rounded-2xl overflow-hidden hover:-translate-y-2 transition duration-300 flex-shrink-0">
-                            <div class="h-44 bg-gradient-to-br from-slate-700 to-slate-800 flex items-center justify-center">
-                                <i class="fa-solid fa-chart-area text-5xl text-slate-600 group-hover:text-brand-500 transition-colors"></i>
+                            class="w-[320px] sm:w-[360px] glass-panel rounded-2xl overflow-hidden hover:-translate-y-2 transition duration-300 flex-shrink-0">
+                            <div class="h-44 bg-slate-800 flex items-center justify-center overflow-hidden">
+                                <img src="assets/img/ClusterCarac_IA001.png" alt="ClusterCarac preview"
+                                    class="w-full h-full object-cover">
                             </div>
                             <div class="p-5 space-y-3">
                                 <div class="flex items-start justify-between gap-2">
-                                    <h3 class="text-lg font-bold text-white" data-i18n="proj_1_title">Churn Prediction Engine</h3>
-                                    <a href="#" class="text-slate-400 hover:text-white text-lg"><i class="fa-brands fa-github"></i></a>
+                                    <h3 class="text-lg font-bold text-white">ClusterCarac: Clusters &amp; Classifications</h3>
                                 </div>
-                                <p class="text-slate-300 text-sm" data-i18n="proj_1_desc">Reducción del 15% en tasa de abandono mediante análisis de supervivencia y Random Forest optimizado.</p>
+                                <p class="text-slate-300 text-sm">
+                                    Retro-inspired cluster characterization: preview of the ClusterCarac chart, categories, and setup for the first project.
+                                </p>
                                 <div class="flex flex-wrap gap-2 text-xs font-mono text-brand-200">
-                                    <span class="bg-brand-900/50 px-2 py-1 rounded">Python</span>
-                                    <span class="bg-brand-900/50 px-2 py-1 rounded">Sklearn</span>
-                                    <span class="bg-brand-900/50 px-2 py-1 rounded">XGBoost</span>
+                                    <span class="bg-brand-900/50 px-2 py-1 rounded">Social studies</span>
+                                    <span class="bg-brand-900/50 px-2 py-1 rounded">Market research</span>
+                                    <span class="bg-brand-900/50 px-2 py-1 rounded">R</span>
+                                    <span class="bg-brand-900/50 px-2 py-1 rounded">FactoClass</span>
+                                    <span class="bg-brand-900/50 px-2 py-1 rounded">EDA</span>
+                                    <span class="bg-brand-900/50 px-2 py-1 rounded">Characterization</span>
                                 </div>
                                 <div class="flex gap-3">
-                                    <a href="#" class="px-4 py-2 rounded-full bg-white text-slate-900 font-semibold text-xs hover:bg-gray-200 transition">View detail</a>
-                                    <a href="#" class="px-4 py-2 rounded-full border border-slate-600 text-slate-200 text-xs hover:border-brand-500 hover:text-brand-400 transition">GitHub</a>
+                                    <a href="project_template.html"
+                                        class="px-4 py-2 rounded-full bg-white text-slate-900 font-semibold text-xs hover:bg-gray-200 transition">View
+                                        Project</a>
                                 </div>
                             </div>
                         </div>
