--- a/index.html
+++ b/index.html
@@ -276,55 +276,33 @@
 
                         <!-- Project Card 2 -->
                         <div
-                            class="hidden w-[320px] sm:w-[360px] glass-panel rounded-2xl overflow-hidden hover:-translate-y-2 transition duration-300 flex-shrink-0">
-                            <div class="h-44 bg-gradient-to-br from-purple-900/50 to-slate-800 flex items-center justify-center">
-                                <i class="fa-solid fa-comments text-5xl text-slate-600 group-hover:text-purple-400 transition-colors"></i>
+                            class="w-[320px] sm:w-[360px] glass-panel rounded-2xl overflow-hidden hover:-translate-y-2 transition duration-300 flex-shrink-0">
+                            <div class="h-44 bg-slate-800 flex items-center justify-center overflow-hidden">
+                                <img src="assets/img/Bogota_trafic_Accidents.png" alt="Bogota Road Safety preview"
+                                    class="w-full h-full object-cover">
                             </div>
                             <div class="p-5 space-y-3">
                                 <div class="flex items-start justify-between gap-2">
-                                    <h3 class="text-lg font-bold text-white" data-i18n="proj_2_title">Sentiment Analysis Dashboard</h3>
-                                    <div class="flex gap-2 text-lg text-slate-400">
-                                        <a href="#" class="hover:text-white"><i class="fa-brands fa-github"></i></a>
-                                        <a href="#" class="hover:text-white"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
-                                    </div>
+                                    <h3 class="text-lg font-bold text-white" data-i18n="proj_2_title">Bogota Road Safety Annual Reports</h3>
                                 </div>
-                                <p class="text-slate-300 text-sm" data-i18n="proj_2_desc">Monitorización en tiempo real de feedback de clientes usando BERT y visualización en Streamlit.</p>
+                                <p class="text-slate-300 text-sm" data-i18n="proj_2_desc">
+                                    Annual road safety reports for Bogota integrating crash data, trends, and prioritized recommendations to reduce casualties citywide.
+                                </p>
                                 <div class="flex flex-wrap gap-2 text-xs font-mono text-purple-200">
-                                    <span class="bg-purple-900/50 px-2 py-1 rounded">HuggingFace</span>
-                                    <span class="bg-purple-900/50 px-2 py-1 rounded">PyTorch</span>
-                                    <span class="bg-purple-900/50 px-2 py-1 rounded">NLP</span>
+                                    <span class="bg-purple-900/50 px-2 py-1 rounded">Road Safety</span>
+                                    <span class="bg-purple-900/50 px-2 py-1 rounded">Data Analysis</span>
+                                    <span class="bg-purple-900/50 px-2 py-1 rounded">Public Health</span>
+                                    <span class="bg-purple-900/50 px-2 py-1 rounded">Policy</span>
+                                    <span class="bg-purple-900/50 px-2 py-1 rounded">R</span>
+                                    <span class="bg-purple-900/50 px-2 py-1 rounded">ggplot2</span>
                                 </div>
                                 <div class="flex gap-3">
-                                    <a href="#" class="px-4 py-2 rounded-full bg-white text-slate-900 font-semibold text-xs hover:bg-gray-200 transition">View detail</a>
-                                    <a href="#" class="px-4 py-2 rounded-full border border-slate-600 text-slate-200 text-xs hover:border-purple-400 transition">GitHub</a>
+                                    <a href="project_template.html"
+                                        class="px-4 py-2 rounded-full bg-white text-slate-900 font-semibold text-xs hover:bg-gray-200 transition">View
+                                        Project</a>
                                 </div>
                             </div>
                         </div>
-
-                        <!-- Project Card 3 -->
-                        <div
-                            class="hidden w-[320px] sm:w-[360px] glass-panel rounded-2xl overflow-hidden hover:-translate-y-2 transition duration-300 flex-shrink-0">
-                            <div class="h-44 bg-gradient-to-br from-emerald-900/40 to-slate-800 flex items-center justify-center">
-                                <i class="fa-solid fa-arrow-trend-up text-5xl text-slate-600 group-hover:text-emerald-400 transition-colors"></i>
-                            </div>
-                            <div class="p-5 space-y-3">
-                                <div class="flex items-start justify-between gap-2">
-                                    <h3 class="text-lg font-bold text-white" data-i18n="proj_3_title">Demand Forecasting</h3>
-                                    <a href="#" class="text-slate-400 hover:text-white text-lg"><i class="fa-brands fa-github"></i></a>
-                                </div>
-                                <p class="text-slate-300 text-sm" data-i18n="proj_3_desc">Modelo SARIMA para predicción de inventario retail con precisión del 92% (MAPE).</p>
-                                <div class="flex flex-wrap gap-2 text-xs font-mono text-emerald-200">
-                                    <span class="bg-emerald-900/50 px-2 py-1 rounded">R</span>
-                                    <span class="bg-emerald-900/50 px-2 py-1 rounded">Time Series</span>
-                                    <span class="bg-emerald-900/50 px-2 py-1 rounded">Forecasting</span>
-                                </div>
-                                <div class="flex gap-3">
-                                    <a href="#" class="px-4 py-2 rounded-full bg-white text-slate-900 font-semibold text-xs hover:bg-gray-200 transition">View detail</a>
-                                    <a href="#" class="px-4 py-2 rounded-full border border-slate-600 text-slate-200 text-xs hover:border-emerald-400 transition">GitHub</a>
-                                </div>
-                            </div>
-                        </div>
-
                         <!-- Project Card 4 -->
                         <div
                             class="hidden w-[320px] sm:w-[360px] glass-panel rounded-2xl overflow-hidden hover:-translate-y-2 transition duration-300 flex-shrink-0">
