--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <link rel="shortcut icon" href="assets/img/PCDCN8bits.png?v=2">
     <!-- Social Sharing Preview -->
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Statistician &amp; Data Scientist">
+    <meta property="og:title" content="Data Scientist &amp; Statistician">
     <meta property="og:description" content="Hello, I am Pedro. This is my portfolio.">
     <meta property="og:image" content="https://pcdelcampon.github.io/portfolio/assets/img/PCDCN8bits.png">
     <meta property="og:url" content="https://pcdelcampon.github.io/portfolio/">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Statistician &amp; Data Scientist">
+    <meta name="twitter:title" content="Data Scientist &amp; Statistician">
     <meta name="twitter:description" content="Hello, I am Pedro. This is my portfolio.">
     <meta name="twitter:image" content="https://pcdelcampon.github.io/portfolio/assets/img/PCDCN8bits.png">
 
@@ -150,7 +150,7 @@
         <div class="md:col-span-7 space-y-6">
             <div class="text-brand-500 font-mono text-sm tracking-widest uppercase" data-i18n="hero_greeting">HELLO, I'M PEDRO</div>
             <h1 class="text-4xl md:text-6xl font-bold leading-tight tracking-tight">
-                <span class="gradient-text block" data-i18n="hero_title_1">Statistician & Data Scientist</span>
+                <span class="gradient-text block" data-i18n="hero_title_1">Data Scientist & Statistician</span>
             </h1>
             <p class="max-w-2xl text-lg md:text-xl text-slate-300" data-i18n="hero_subtitle">
                 Data Worker who transforms complex data into clear, actionable insights through visualization, modeling, and
@@ -225,7 +225,7 @@
                     </h2>
                     <div class="prose prose-invert text-slate-300">
                         <p class="mb-4" data-i18n="about_p1">
-                            Statistician and Data Scientist with 12+ years of experience leveraging large datasets to generate clear, actionable insights that support strategic decision-making.
+                            Data Scientist and Statistician with 12+ years of experience leveraging large datasets to generate clear, actionable insights that support strategic decision-making.
                         </p>
                         <p class="mb-6" data-i18n="about_p2">
                             Strong expertise in statistical sampling, multivariate analysis, machine learning, predictive modeling, big data, and data visualization, with advanced command of modern analytical tools and the adaptability to work effectively across industries and analytical environments.
