--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     </nav>
 
     <!-- Hero Section -->
-<section id="hero" class="relative min-h-screen flex items-center overflow-hidden pt-24 pb-16">
+<section id="hero" class="relative min-h-[50vh] lg:min-h-[60vh] flex items-start lg:items-center overflow-hidden pt-12 md:pt-16 pb-8 md:pb-12">
     <canvas id="hero-canvas"></canvas>
     <div class="max-w-6xl mx-auto px-6 lg:px-8 w-full relative z-10 grid md:grid-cols-12 gap-8 items-center">
         <div class="md:col-span-7 space-y-6">
