--- a/index.html
+++ b/index.html
@@ -244,138 +244,75 @@
             <div class="relative">
                 <div class="overflow-x-auto pb-4 -mx-4 px-4 lg:mx-0 lg:px-0">
                     <div class="flex gap-6 min-w-full">
-                        <!-- Project Card 1 -->
-                        <div
-                            class="w-[320px] sm:w-[360px] glass-panel rounded-2xl overflow-hidden hover:-translate-y-2 transition duration-300 flex-shrink-0">
-                            <div class="h-44 bg-slate-800 flex items-center justify-center overflow-hidden">
-                                <img src="assets/img/ClusterCarac_IA001.png" alt="ClusterCarac preview"
-                                    class="w-full h-full object-cover">
-                            </div>
-                            <div class="p-5 space-y-3">
-                                <div class="flex items-start justify-between gap-2">
-                                    <h3 class="text-lg font-bold text-white">ClusterCarac: Clusters &amp; Classifications</h3>
-                                </div>
-                                <p class="text-slate-300 text-sm">
-                                    Retro-inspired cluster characterization: preview of the ClusterCarac chart, categories, and setup for the first project.
-                                </p>
-                                <div class="flex flex-wrap gap-2 text-xs font-mono text-brand-200">
-                                    <span class="bg-brand-900/50 px-2 py-1 rounded">Social studies</span>
-                                    <span class="bg-brand-900/50 px-2 py-1 rounded">Market research</span>
-                                    <span class="bg-brand-900/50 px-2 py-1 rounded">R</span>
-                                    <span class="bg-brand-900/50 px-2 py-1 rounded">FactoClass</span>
-                                    <span class="bg-brand-900/50 px-2 py-1 rounded">EDA</span>
-                                    <span class="bg-brand-900/50 px-2 py-1 rounded">Characterization</span>
-                                </div>
-                                <div class="flex gap-3">
-                                    <a href="project_template.html"
-                                        class="px-4 py-2 rounded-full bg-white text-slate-900 font-semibold text-xs hover:bg-gray-200 transition">View
-                                        Project</a>
-                                </div>
-                            </div>
-                        </div>
 
-                        <!-- Project Card 2 -->
-                        <div
-                            class="w-[320px] sm:w-[360px] glass-panel rounded-2xl overflow-hidden hover:-translate-y-2 transition duration-300 flex-shrink-0">
-                            <div class="h-44 bg-slate-800 flex items-center justify-center overflow-hidden">
-                                <img src="assets/img/Bogota_trafic_Accidents.png" alt="Bogota Road Safety preview"
-                                    class="w-full h-full object-cover">
-                            </div>
-                            <div class="p-5 space-y-3">
-                                <div class="flex items-start justify-between gap-2">
-                                    <h3 class="text-lg font-bold text-white" data-i18n="proj_2_title">Bogota Road Safety Annual Reports</h3>
-                                </div>
-                                <p class="text-slate-300 text-sm" data-i18n="proj_2_desc">
-                                    Annual road safety reports for Bogota integrating crash data, trends, and prioritized recommendations to reduce casualties citywide.
-                                </p>
-                                <div class="flex flex-wrap gap-2 text-xs font-mono text-purple-200">
-                                    <span class="bg-purple-900/50 px-2 py-1 rounded">Road Safety</span>
-                                    <span class="bg-purple-900/50 px-2 py-1 rounded">Data Analysis</span>
-                                    <span class="bg-purple-900/50 px-2 py-1 rounded">Public Health</span>
-                                    <span class="bg-purple-900/50 px-2 py-1 rounded">Policy</span>
-                                    <span class="bg-purple-900/50 px-2 py-1 rounded">R</span>
-                                    <span class="bg-purple-900/50 px-2 py-1 rounded">ggplot2</span>
-                                </div>
-                                <div class="flex gap-3">
-                                    <a href="project_template.html"
-                                        class="px-4 py-2 rounded-full bg-white text-slate-900 font-semibold text-xs hover:bg-gray-200 transition">View
-                                        Project</a>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- Project Card 4 -->
-                        <div
-                            class="hidden w-[320px] sm:w-[360px] glass-panel rounded-2xl overflow-hidden hover:-translate-y-2 transition duration-300 flex-shrink-0">
-                            <div class="h-44 bg-gradient-to-br from-cyan-900/50 to-slate-800 flex items-center justify-center">
-                                <i class="fa-solid fa-database text-5xl text-slate-600 group-hover:text-cyan-300 transition-colors"></i>
-                            </div>
-                            <div class="p-5 space-y-3">
-                                <div class="flex items-start justify-between gap-2">
-                                    <h3 class="text-lg font-bold text-white">Customer 360</h3>
-                                    <a href="#" class="text-slate-400 hover:text-white text-lg"><i class="fa-brands fa-github"></i></a>
-                                </div>
-                                <p class="text-slate-300 text-sm">Golden record de cliente y scoring de valor unificado para marketing.</p>
-                                <div class="flex flex-wrap gap-2 text-xs font-mono text-cyan-200">
-                                    <span class="bg-cyan-900/40 px-2 py-1 rounded">Python</span>
-                                    <span class="bg-cyan-900/40 px-2 py-1 rounded">SQL</span>
-                                    <span class="bg-cyan-900/40 px-2 py-1 rounded">dbt</span>
-                                </div>
-                                <div class="flex gap-3">
-                                    <a href="#" class="px-4 py-2 rounded-full bg-white text-slate-900 font-semibold text-xs hover:bg-gray-200 transition">View detail</a>
-                                    <a href="#" class="px-4 py-2 rounded-full border border-slate-600 text-slate-200 text-xs hover:border-cyan-300 hover:text-cyan-200 transition">GitHub</a>
-                                </div>
-                            </div>
-                        </div>
+                          <!-- Project Card 1 -->
+                          <div
+                              class="w-[320px] sm:w-[360px] glass-panel rounded-2xl overflow-hidden
+                          hover:-translate-y-2 transition duration-300 flex-shrink-0">
+                              <div class="h-44 bg-slate-800 flex items-center justify-center overflow-hidden">
+                                  <img src="assets/img/ClusterCarac_IA001.png" alt="ClusterCarac preview"
+                                      class="w-full h-full object-cover">
+                              </div>
+                              <div class="p-5 space-y-3">
+                                  <div class="flex items-start justify-between gap-2">
+                                      <h3 class="text-lg font-bold text-white">ClusterCarac: Clusters &amp;
+                          Classifications</h3>
+                                  </div>
+                                  <p class="text-slate-300 text-sm">
+                                      Retro-inspired cluster characterization: preview of the ClusterCarac chart,
+                          categories, and setup for the first project.
+                                  </p>
+                                  <div class="flex flex-wrap gap-2 text-xs font-mono text-brand-200">
+                                      <span class="bg-brand-900/50 px-2 py-1 rounded">Social studies</span>
+                                      <span class="bg-brand-900/50 px-2 py-1 rounded">Market research</span>
+                                      <span class="bg-brand-900/50 px-2 py-1 rounded">R</span>
+                                      <span class="bg-brand-900/50 px-2 py-1 rounded">FactoClass</span>
+                                      <span class="bg-brand-900/50 px-2 py-1 rounded">EDA</span>
+                                      <span class="bg-brand-900/50 px-2 py-1 rounded">Characterization</span>
+                                  </div>
+                                  <div class="flex gap-3">
+                                      <a href="project_template.html"
+                                          class="px-4 py-2 rounded-full bg-white text-slate-900 font-semibold text-xs
+                          hover:bg-gray-200 transition">View
+                                          Project</a>
+                                  </div>
+                              </div>
+                          </div>
 
-                        <!-- Project Card 5 -->
-                        <div
-                            class="w-[320px] sm:w-[360px] glass-panel rounded-2xl overflow-hidden hover:-translate-y-2 transition duration-300 flex-shrink-0">
-                            <div class="h-44 bg-gradient-to-br from-amber-900/40 to-slate-800 flex items-center justify-center">
-                                <i class="fa-solid fa-dollar-sign text-5xl text-slate-600 group-hover:text-amber-300 transition-colors"></i>
-                            </div>
-                            <div class="p-5 space-y-3">
-                                <div class="flex items-start justify-between gap-2">
-                                    <h3 class="text-lg font-bold text-white">Pricing Optimization</h3>
-                                    <a href="#" class="text-slate-400 hover:text-white text-lg"><i class="fa-brands fa-github"></i></a>
-                                </div>
-                                <p class="text-slate-300 text-sm">Elasticidades de precio y simulación de margen por SKU con escenarios.</p>
-                                <div class="flex flex-wrap gap-2 text-xs font-mono text-amber-200">
-                                    <span class="bg-amber-900/40 px-2 py-1 rounded">R</span>
-                                    <span class="bg-amber-900/40 px-2 py-1 rounded">Forecasting</span>
-                                    <span class="bg-amber-900/40 px-2 py-1 rounded">Bayesian</span>
-                                </div>
-                                <div class="flex gap-3">
-                                    <a href="#" class="px-4 py-2 rounded-full bg-white text-slate-900 font-semibold text-xs hover:bg-gray-200 transition">View detail</a>
-                                    <a href="#" class="px-4 py-2 rounded-full border border-slate-600 text-slate-200 text-xs hover:border-amber-300 hover:text-amber-200 transition">GitHub</a>
-                                </div>
-                            </div>
-                        </div>
-
-                        <!-- Project Card 6 -->
-                        <div
-                            class="w-[320px] sm:w-[360px] glass-panel rounded-2xl overflow-hidden hover:-translate-y-2 transition duration-300 flex-shrink-0">
-                            <div class="h-44 bg-gradient-to-br from-teal-900/40 to-slate-800 flex items-center justify-center">
-                                <i class="fa-solid fa-sitemap text-5xl text-slate-600 group-hover:text-teal-300 transition-colors"></i>
-                            </div>
-                            <div class="p-5 space-y-3">
-                                <div class="flex items-start justify-between gap-2">
-                                    <h3 class="text-lg font-bold text-white">MLOps Pipeline</h3>
-                                    <a href="#" class="text-slate-400 hover:text-white text-lg"><i class="fa-brands fa-github"></i></a>
-                                </div>
-                                <p class="text-slate-300 text-sm">Orquestación CI/CD para modelos, tracking y despliegue en contenedores.</p>
-                                <div class="flex flex-wrap gap-2 text-xs font-mono text-teal-200">
-                                    <span class="bg-teal-900/40 px-2 py-1 rounded">Docker</span>
-                                    <span class="bg-teal-900/40 px-2 py-1 rounded">CI/CD</span>
-                                    <span class="bg-teal-900/40 px-2 py-1 rounded">Monitoring</span>
-                                </div>
-                                <div class="flex gap-3">
-                                    <a href="#" class="px-4 py-2 rounded-full bg-white text-slate-900 font-semibold text-xs hover:bg-gray-200 transition">View detail</a>
-                                    <a href="#" class="px-4 py-2 rounded-full border border-slate-600 text-slate-200 text-xs hover:border-teal-300 hover:text-teal-200 transition">GitHub</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                          <!-- Project Card 2 -->
+                          <div
+                              class="w-[320px] sm:w-[360px] glass-panel rounded-2xl overflow-hidden
+                          hover:-translate-y-2 transition duration-300 flex-shrink-0">
+                              <div class="h-44 bg-slate-800 flex items-center justify-center overflow-hidden">
+                                  <img src="assets/img/Bogota_trafic_Accidents.png" alt="Bogota Road Safety preview"
+                                      class="w-full h-full object-cover">
+                              </div>
+                              <div class="p-5 space-y-3">
+                                  <div class="flex items-start justify-between gap-2">
+                                      <h3 class="text-lg font-bold text-white" data-i18n="proj_2_title">Bogota Road
+                          Safety Annual Reports</h3>
+                                  </div>
+                                  <p class="text-slate-300 text-sm" data-i18n="proj_2_desc">
+                                      Annual road safety reports for Bogota integrating crash data, trends, and
+                          prioritized recommendations to reduce casualties citywide.
+                                  </p>
+                                  <div class="flex flex-wrap gap-2 text-xs font-mono text-purple-200">
+                                      <span class="bg-purple-900/50 px-2 py-1 rounded">Road Safety</span>
+                                      <span class="bg-purple-900/50 px-2 py-1 rounded">Data Analysis</span>
+                                      <span class="bg-purple-900/50 px-2 py-1 rounded">Public Health</span>
+                                      <span class="bg-purple-900/50 px-2 py-1 rounded">Policy</span>
+                                      <span class="bg-purple-900/50 px-2 py-1 rounded">R</span>
+                                      <span class="bg-purple-900/50 px-2 py-1 rounded">ggplot2</span>
+                                  </div>
+                                  <div class="flex gap-3">
+                                      <a href="project_template.html"
+                                          class="px-4 py-2 rounded-full bg-white text-slate-900 font-semibold text-xs
+                          hover:bg-gray-200 transition">View
+                                          Project</a>
+                                  </div>
+                              </div>
+                          </div>
+</div>
             </div>
         </div>
     </section>
