--- a/index.html
+++ b/index.html
@@ -255,12 +255,12 @@
                               </div>
                               <div class="p-5 space-y-3">
                                   <div class="flex items-start justify-between gap-2">
-                                      <h3 class="text-lg font-bold text-white">ClusterCarac: Clusters &amp;
-                          Classifications</h3>
+                                      <h3 class="text-lg font-bold text-white" data-i18n="proj_cluster_title">
+                          ClusterCarac: Clusters &amp; Classifications</h3>
                                   </div>
-                                  <p class="text-slate-300 text-sm">
-                                      Retro-inspired cluster characterization: preview of the ClusterCarac chart,
-                          categories, and setup for the first project.
+                                  <p class="text-slate-300 text-sm" data-i18n="proj_cluster_desc">
+                                      R package that surfaces what defines each cluster or category; retro-inspired
+                          characterization preview.
                                   </p>
                                   <div class="flex flex-wrap gap-2 text-xs font-mono text-brand-200">
                                       <span class="bg-brand-900/50 px-2 py-1 rounded">Social studies</span>
@@ -271,7 +271,7 @@
                                       <span class="bg-brand-900/50 px-2 py-1 rounded">Characterization</span>
                                   </div>
                                   <div class="flex gap-3">
-                                      <a href="project_template.html"
+                                      <a href="projects/cluster-carac.html"
                                           class="px-4 py-2 rounded-full bg-white text-slate-900 font-semibold text-xs
                           hover:bg-gray-200 transition">View
                                           Project</a>
