nombre de clusterCarac

--- a/projects/cluster-carac.html
+++ b/projects/cluster-carac.html
@@ -87,8 +87,8 @@
                 <div class="text-sm font-mono text-brand-500">projects/cluster-carac</div>
 
                 <div data-lang="en" class="space-y-3">
-                    <h1 class="text-3xl md:text-4xl font-bold text-white">Characterizing Clusters and
-                        Classifications</h1>
+                    <h1 class="text-3xl md:text-4xl font-bold text-white">Uncover the unique profile of every data
+                        segment</h1>
                     <p class="text-lg text-slate-300 leading-relaxed">
                         ClusterCarac is an R package that helps you understand what makes each group in your data unique.
                         Whether your groups come from clustering (k-means, hierarchical, etc.) or from predefined categories
@@ -98,8 +98,8 @@
                 </div>
 
                 <div data-lang="es" class="space-y-3 hidden">
-                    <h1 class="text-3xl md:text-4xl font-bold text-white">Caracterización de clusters y
-                        clasificaciones</h1>
+                    <h1 class="text-3xl md:text-4xl font-bold text-white">Descubre el perfil único de cada segmento de
+                        datos</h1>
                     <p class="text-lg text-slate-300 leading-relaxed">
                         ClusterCarac es un paquete de R que te ayuda a entender qué hace único a cada grupo en tus datos.
                         Ya sea que provengan de clustering (k-means, jerárquico, etc.) o de categorías predefinidas como
