--- a/projects/cluster-carac.html
+++ b/projects/cluster-carac.html
@@ -90,7 +90,8 @@
                     <h1 class="text-3xl md:text-4xl font-bold text-white">Uncover the unique profile of every data
                         segment</h1>
                     <p class="text-lg text-slate-300 leading-relaxed">
-                        ClusterCarac is an R package that helps you understand what makes each group in your data unique.
+                        <a href="https://github.com/pcdelcampon/ClusterCarac" class="text-brand-300 hover:text-brand-200 underline decoration-dotted"
+                            target="_blank" rel="noreferrer">ClusterCarac</a> is an R package that helps you understand what makes each group in your data unique.
                         Whether your groups come from clustering (k-means, hierarchical, etc.) or from predefined categories
                         like customer segments or regions, ClusterCarac reveals the traits that set one group apart from
                         another.
@@ -101,7 +102,8 @@
                     <h1 class="text-3xl md:text-4xl font-bold text-white">Descubre el perfil único de cada segmento de
                         datos</h1>
                     <p class="text-lg text-slate-300 leading-relaxed">
-                        ClusterCarac es un paquete de R que te ayuda a entender qué hace único a cada grupo en tus datos.
+                        <a href="https://github.com/pcdelcampon/ClusterCarac" class="text-brand-300 hover:text-brand-200 underline decoration-dotted"
+                            target="_blank" rel="noreferrer">ClusterCarac</a> es un paquete de R que te ayuda a entender qué hace único a cada grupo en tus datos.
                         Ya sea que provengan de clustering (k-means, jerárquico, etc.) o de categorías predefinidas como
                         segmentos o regiones, ClusterCarac revela los rasgos que distinguen un grupo de otro.
                     </p>
@@ -113,7 +115,6 @@
                     <span class="bg-brand-900/50 px-2 py-1 rounded">EDA</span>
                     <span class="bg-brand-900/50 px-2 py-1 rounded">Segmentation</span>
                     <span class="bg-brand-900/50 px-2 py-1 rounded">FactoClass</span>
-                    <span class="bg-brand-900/50 px-2 py-1 rounded">Retro-inspired</span>
                 </div>
 
                 <div data-lang="es" class="flex flex-wrap gap-2 text-xs font-mono text-brand-100 hidden">
@@ -122,7 +123,6 @@
                     <span class="bg-brand-900/50 px-2 py-1 rounded">EDA</span>
                     <span class="bg-brand-900/50 px-2 py-1 rounded">Segmentación</span>
                     <span class="bg-brand-900/50 px-2 py-1 rounded">FactoClass</span>
-                    <span class="bg-brand-900/50 px-2 py-1 rounded">Retro-inspirado</span>
                 </div>
 
                 <div class="flex flex-wrap gap-3">
@@ -178,10 +178,19 @@
 
                 <section class="space-y-3">
                     <h3 class="text-xl font-semibold text-white">Why I created ClusterCarac</h3>
-                    <p class="text-slate-300">ClusterCarac exists because I wanted to bring back—in a modern, focused
-                        way—the spirit of the characterization algorithms originally implemented in FactoClass.</p>
-                    <p class="text-slate-300">FactoClass, developed at the Universidad Nacional de Colombia with Professor
-                        Campo Elías Pardo and collaborators, offered powerful tools for describing groups produced by
+                    <p class="text-slate-300"><a href="https://github.com/pcdelcampon/ClusterCarac"
+                            class="text-brand-300 hover:text-brand-200 underline decoration-dotted" target="_blank"
+                            rel="noreferrer">ClusterCarac</a> exists because I wanted to bring back—in a modern, focused
+                        way—the spirit of the characterization algorithms originally implemented in <a
+                            href="https://github.com/pcdelcampon/ClusterCarac"
+                            class="text-brand-300 hover:text-brand-200 underline decoration-dotted" target="_blank"
+                            rel="noreferrer">FactoClass</a>.</p>
+                    <p class="text-slate-300"><a href="https://github.com/pcdelcampon/ClusterCarac"
+                            class="text-brand-300 hover:text-brand-200 underline decoration-dotted" target="_blank"
+                            rel="noreferrer">FactoClass</a>, developed at the Universidad Nacional de Colombia with Professor
+                        <a href="https://www.linkedin.com/in/campo-el%C3%ADas-pardo-5ab19435/"
+                            class="text-brand-300 hover:text-brand-200 underline decoration-dotted" target="_blank"
+                            rel="noreferrer">Campo Elías Pardo</a> and collaborators, offered powerful tools for describing groups produced by
                         clustering procedures. Many users asked how to interpret or extract the characterization results,
                         which highlighted a need.</p>
                     <p class="text-slate-300">ClusterCarac is my response: not a replacement for FactoClass, but a
@@ -224,10 +233,19 @@
 
                 <section class="space-y-3">
                     <h3 class="text-xl font-semibold text-white">Por qué creé ClusterCarac</h3>
-                    <p class="text-slate-300">ClusterCarac existe porque quise recuperar—de forma moderna y enfocada—el
-                        espíritu de los algoritmos de caracterización implementados en FactoClass.</p>
-                    <p class="text-slate-300">FactoClass, desarrollado en la Universidad Nacional de Colombia con el profesor
-                        Campo Elías Pardo y otros colaboradores, ofrecía herramientas potentes para describir los grupos
+                    <p class="text-slate-300"><a href="https://github.com/pcdelcampon/ClusterCarac"
+                            class="text-brand-300 hover:text-brand-200 underline decoration-dotted" target="_blank"
+                            rel="noreferrer">ClusterCarac</a> existe porque quise recuperar—de forma moderna y enfocada—el
+                        espíritu de los algoritmos de caracterización implementados en <a
+                            href="https://github.com/pcdelcampon/ClusterCarac"
+                            class="text-brand-300 hover:text-brand-200 underline decoration-dotted" target="_blank"
+                            rel="noreferrer">FactoClass</a>.</p>
+                    <p class="text-slate-300"><a href="https://github.com/pcdelcampon/ClusterCarac"
+                            class="text-brand-300 hover:text-brand-200 underline decoration-dotted" target="_blank"
+                            rel="noreferrer">FactoClass</a>, desarrollado en la Universidad Nacional de Colombia con el profesor
+                        <a href="https://www.linkedin.com/in/campo-el%C3%ADas-pardo-5ab19435/"
+                            class="text-brand-300 hover:text-brand-200 underline decoration-dotted" target="_blank"
+                            rel="noreferrer">Campo Elías Pardo</a> y otros colaboradores, ofrecía herramientas potentes para describir los grupos
                         generados por procedimientos de clustering. Muchas personas preguntaban cómo interpretar o extraer
                         esas caracterizaciones, y eso evidenció una necesidad.</p>
                     <p class="text-slate-300">ClusterCarac es mi respuesta: no pretende reemplazar a FactoClass, sino ser un
