--- a/index.html
+++ b/index.html
@@ -249,10 +249,11 @@
                           <div
                               class="w-[320px] sm:w-[360px] glass-panel rounded-2xl overflow-hidden
                           hover:-translate-y-2 transition duration-300 flex-shrink-0">
-                              <div class="h-44 bg-slate-800 flex items-center justify-center overflow-hidden">
+                              <a href="projects/cluster-carac.html"
+                                  class="h-44 bg-slate-800 flex items-center justify-center overflow-hidden block">
                                   <img src="assets/img/ClusterCarac_IA001.png" alt="ClusterCarac preview"
                                       class="w-full h-full object-cover">
-                              </div>
+                              </a>
                               <div class="p-5 space-y-3">
                                   <div class="flex items-start justify-between gap-2">
                                       <h3 class="text-lg font-bold text-white" data-i18n="proj_cluster_title">
@@ -283,10 +284,11 @@
                           <div
                               class="w-[320px] sm:w-[360px] glass-panel rounded-2xl overflow-hidden
                           hover:-translate-y-2 transition duration-300 flex-shrink-0">
-                              <div class="h-44 bg-slate-800 flex items-center justify-center overflow-hidden">
+                              <a href="project_template.html"
+                                  class="h-44 bg-slate-800 flex items-center justify-center overflow-hidden block">
                                   <img src="assets/img/Bogota_trafic_Accidents.png" alt="Bogota Road Safety preview"
                                       class="w-full h-full object-cover">
-                              </div>
+                              </a>
                               <div class="p-5 space-y-3">
                                   <div class="flex items-start justify-between gap-2">
                                       <h3 class="text-lg font-bold text-white" data-i18n="proj_2_title">Bogota Road
